fixed overflow

--- a/source/frontend/app/containers/RoomSearchContainer/RoomSearchContainer.sass
+++ b/source/frontend/app/containers/RoomSearchContainer/RoomSearchContainer.sass
@@ -3,6 +3,7 @@
 .RoomSearchContainer
   height: auto
   padding: 20px
+  overflow: scroll
 
   h1
     font-weight: bold
